Ajout listes, todo -> sauvegarde pile contenu avec listegit add .

--- a/abcd.tex
+++ b/abcd.tex
@@ -1,30 +1,17 @@
-\documentclass[12pt,a4paper,twoside]{beamer}
+\documentclass[12pt,a4paper,twoside]{article}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[francais]{babel}
 \usepackage{color}
 \usepackage{graphicx}
-\setbeamertemplate{blocks}[rounded][shadow=true]
-\setbeamercolor{block title}{fg=black,bg=blue}
-\setbeamertemplate{navigation symbols}{ \insertslidenavigationsymbol}
 \begin{document}
-\title{dsfsdfsd}
-\author{dfsdfsd}
+\title{fzefze}
+\author{zfzef}
 \maketitle
-\end{frame}
-\begin{frame}
-\frametitle{zefzef}
-\begin{block}{ezfze}
+\section{zefze}
+\subsection{zefze}
 zefzef\\
-\end{block}\begin{block}{ezfze}
-zefzef\\
-\end{block}
-\end{frame}
-\begin{frame}
-\frametitle{zefzef}
-\begin{block}{ezfze}
-zefzef\\
-zefzef\\
-\end{block}
-\end{frame}
+zefzef zefzef zefz efze fz ef zef ze f ze fze\\
+\begin{itemize}
+\item ezfzefze\item ezfzefze\item ezfzefze\end{itemize}
 \end{document}
